--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -51,7 +51,7 @@
                 
                 <!-- 編集ボタン -->
                 <div class="mt-4 ml-auto">
-                    <a href="test_update_senior/{{ object.senior_id }}/" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                    <a href="test_update_senior/1" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                         編集する
                     </a>
             </div>     
