--- a/project/templates/senior/list_view_senior.html
+++ b/project/templates/senior/list_view_senior.html
@@ -28,7 +28,7 @@
             </button>
             <button
                 class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
-                type="button"><a href="{% url 'main_func:company_page' %}">
+                type="button"><a href="{% url 'main_func:last_page' %}">
                 マイページ</a>
             </button>
             <button
