--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>DjangoでTailwindCSSを使用する方法</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <!-- Font Awesomeの読み込み -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>User Page</title>
+​
 </head>
-<body>
-    <h2>募集側ログイン成功</h2>
-    <p style="color: blue"><a href={% url 'accounts:logout' %}>ログアウトする</a></p>
+<body class="bg-gray-100 font-sans text-gray-800">
+    <header>
+        <div class="mx-auto px-4 py-2 sm:px-6 sm:py-4 lg:px-8 border bg-white">
+          <div class="sm:flex sm:items-center sm:justify-between">
+            {% load static %}
+            <div class="text-center sm:text-left w-1/2 sm:w-1/6">
+              <img src="{% static 'imgs/logo.png' %}">
+            </div>
+            <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
+                <!-- ログインかログアウトか -->
+                <button
+                class="block rounded-lg bg-indigo-600 px-3 sm:px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
+                type="button">
+                ログイン
+              </button>
+            </div>
+          </div>
+        </div>
+    </header>
+​
+    <div class="container mx-auto mt-8 flex flex-wrap justify-center items-center">
+        <!-- 上部のカード - プロフィール画像と個人情報 -->
+        <div class="sm:w-4/5 md:w-4/5 lg:w-4/5 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
+            <div class="p-6 flex flex-col sm:flex-row">
+                <div class="w-full sm:w-1/2 mb-4 sm:mb-0">
+                    <div class="w-full h-48 md:w-64 md:h-64 rounded-full overflow-hidden border-4 border-gray-100 mx-auto">
+                        <img src="https://placekitten.com/150/150" alt="プロフィール画像" class="w-full h-full object-cover">
+                    </div>
+                </div>
+                <div class="mt-4 text-left">
+                    <h2 class="text-5xl font-semibold text-gray-800 mb-4"><i class="fas fa-user"></i>{{ object.name }}</h2>
+                    <p class="text-2xl text-gray-500 mb-2">年齢: <span class="text-3xl text-gray-800">{{ object.age }}</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 性別: <span class="text-3xl text-gray-800">男性</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 所在: <span class="text-3xl text-gray-800">{{ object.address }}</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-industry"></i> 業種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">流通・小売・フード</p>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-paint-brush"></i> 職種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">クリエイティブ</p>
+                </div>        
+                
+                <!-- 編集ボタン -->
+                <div class="mt-4 ml-auto">
+                    <a href="test_update_senior/1" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                        編集する
+                    </a>
+            </div>     
+            </div>
+        </div>
+​
+        <!-- 下部のカード - 経歴 -->
+        <div class="w-full md:w-full lg:w-full bg-white rounded-lg overflow-hidden shadow-lg mb-8 mx-4">
+            <div class="p-6">
+                <h2 class="text-3xl font-semibold text-gray-800 mb-4">経歴</h2>
+                <div class="mb-4">
+                    <p class="text-5xl font-semibold">{{ object.description | linebreaks }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
