--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -18,12 +18,12 @@
               <img src="{% static 'imgs/logo.png' %}">
             </div>
             <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
-                <!-- ログインかログアウトか -->
-                <button
-                class="block rounded-lg bg-indigo-600 px-3 sm:px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
-                type="button">
-                ログイン
-              </button>
+
+            <button
+                class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
+                type="button"><a href="{% url 'accounts:logout'%}">
+                ログアウト</a>
+            </button>
             </div>
           </div>
         </div>
